--- a/README
+++ b/README
@@ -177,7 +177,17 @@ stress --vm-bytes 200m --vm-keep -m 1                   // 再次运行占用内
 
 
   //     Docker是如何使用Cgroups的
+// docker run -m 
+sudo docker run -itd -m 128m ubuntu
+cd /sys/fs/cgroup/memory/docker/2f79ceb402fd832f13c6f25623571c8b5b80ba1a08f95672f58e3006430cf2f5/
+cat memory.limit_in_bytes 
+cat memory.usage_in_bytes 
+
   //     用Go语言实现通过cgroup限制容器的资源
+vi main.go
+go run main.go
+// 新开一个shell, top , ls  testmemorylimit等
+
   //   Union File System
   //     什么是Union File System
   //     AUFS
